# beta-test-elena

./: .gitignore  AGENT.md  BETA-REPORT.md  Cargo.toml  README.md  test-output.txt
docs/: FUTURE-INTEGRATION.md
memory/: JOURNAL.md
src/: main.rs
tests/: rigor_test.rs
